src/snapshots/matcha__error__test__error_unexpected_endif.snap
---
source: src/error.rs
expression: "Hello {% endif %}"
---
Unexpected keyword: endif. Expected one of: if, for

error: 
  ┌─ -test-:1:10
  │
1 │ Hello {% endif %}
  │          ^^^^^


